<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="218dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="680dp"
        android:text="@string/last_name_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastnameText"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginStart="218dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="632dp"
        android:autofillHints=""
        android:background="#E8E8E8"
        android:backgroundTint="@android:color/transparent"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        android:paddingStart="4sp"
        android:paddingEnd="4sp"
        android:textColor="#000"
        android:textColorHint="#616161"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="310dp"
        android:layout_marginBottom="581dp"
        android:text="@string/gender_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="191dp"
        android:layout_marginEnd="298dp"
        android:layout_marginBottom="508dp"
        android:text="@string/birthday_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="299dp"
        android:layout_marginEnd="294dp"
        android:layout_marginBottom="400dp"
        android:text="@string/address_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="434dp"
        android:layout_marginEnd="324dp"
        android:layout_marginBottom="265dp"
        android:text="@string/email_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="292dp"
        android:layout_height="49dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="574dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:text="@string/male"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:text="@string/female"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/selectDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="301dp"
        android:layout_marginTop="223dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="460dp"
        android:text="@string/select"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstnameText"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="217dp"
        android:layout_marginBottom="630dp"
        android:autofillHints=""
        android:background="#E8E8E8"
        android:backgroundTint="@android:color/transparent"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        android:paddingStart="4sp"
        android:paddingEnd="4sp"
        android:textColor="#000"
        android:textColorHint="#616161"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="289dp"
        android:layout_marginBottom="678dp"
        android:text="@string/first_name_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/birthdayText"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="223dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="460dp"
        android:autofillHints=""
        android:background="#E8E8E8"
        android:backgroundTint="@android:color/transparent"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/birthday"
        android:inputType="date"
        android:paddingStart="4sp"
        android:paddingEnd="4sp"
        android:textColorHint="#616161"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/addressText"
        android:layout_width="358dp"
        android:layout_height="81dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="331dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="319dp"
        android:autofillHints=""
        android:background="#E8E8E8"
        android:backgroundTint="@android:color/transparent"
        android:backgroundTintMode="add"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/address"
        android:inputType="textMultiLine"
        android:paddingStart="4sp"
        android:paddingEnd="4sp"
        android:textColorHint="#616161"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="358dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="466dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="225dp"
        android:autofillHints=""
        android:background="#E8E8E8"
        android:backgroundTint="@android:color/transparent"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="4sp"
        android:paddingEnd="4sp"
        android:textColorHint="#616161"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <CheckBox
        android:id="@+id/agreeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="526dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="157dp"
        android:text="@string/i_agree_to_terms_of_use"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="174dp"
        android:layout_height="61dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="70dp"
        android:text="@string/register"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>